--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
 <header>
+    <div id="navegador">
+        <ul>
+        <li><a href="#">Grandes ofertas en comedores</a></li>
+        <li><a href="#">Español</a></li>
+        <li><a href="#">Arg</a></li>
+        </ul>
+        </div>
     <ul>
-        <li>Grandes ofertas en comederos</li>
         <li>Menú regional</li>
     </ul>
     <ul>
