--- a/index.html
+++ b/index.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetShop</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-<header>
-    <ul>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <ul>
         <li>Grandes ofertas en comederos</li>
         <li>Menú regional</li>
-    </ul>
-    <ul>
+      </ul>
+      <ul>
         <li>Español</li>
         <li>$ARG</li>
-    </ul>
-    <img width="220px" src="./Images/Logo.png" alt="Logo">
-    <ul>
+      </ul>
+      <img width="220px" src="./Images/Logo.png" alt="Logo" />
+      <ul>
         <li>Menu principal</li>
-    </ul>
-    <ul>
-        <li> <a href="./Pages/Categorias.html">Categorias</a></li>
-        <li> <a href="./Pages/Pets.html">Pets</a></li>
-        <li> <a href="./Pages/Nosotros.html">Nosotros</a></li>
-        <li> <a href="./Pages/Contactanos.html">Contactanos</a></li>
-    </ul>
-</header>
-<section>
-    <img width="600px" src="./Images/background 1.png" alt="background">
-    <ul type="none">
-    <li>¡Es un placer tenerte aquí!</li>
-    <li>¡Comederos con descuento!</li>
-    <li>COMEDEROS</li>
-    </ul>
-</section>  
-<section>
-<img width="60px" src="./Images/patita.png" alt="patita">
-<p>Productos destacados</p>
-<span>Comederos - Accesorios - Comida</span>
-</section> 
-<section>
-    <img width="250px" src="./Images/churrasquito.png" alt="churrasquito">
-    <p>Juguete Churrasquito</p>
-    <p>$150</p>
-    <img width="250px" src="./Images/comedero.png" alt="Comedero">
-    <p>Comedero</p>
-    <p>$250</p>
-    <img width="250px" src="./Images/Huesito.png" alt="Huesito">
-<p>Huesito</p>
-<p>$650</p>
-</section>
-</body>
-<footer>
+      </ul>
+      <ul>
+        <li><a href="./Pages/Categorias.html">Categorias</a></li>
+        <li><a href="./Pages/Pets.html">Pets</a></li>
+        <li><a href="./Pages/Nosotros.html">Nosotros</a></li>
+        <li><a href="./Pages/Contactanos.html">Contactanos</a></li>
+      </ul>
+    </header>
+    <section>
+      <img width="600px" src="./Images/background 1.png" alt="background" />
+      <ul type="none">
+        <li>¡Es un placer tenerte aquí!</li>
+        <li>¡Comederos con descuento!</li>
+        <li>COMEDEROS</li>
+      </ul>
+    </section>
+    <section class="sec-productos">
+      <img width="60px" src="./Images/patita.png" alt="patita" />
+      <p id="tit-productos">Productos destacados</p>
+      <p id="tit-produc">Comederos - Accesorios - Comida</p>
+    </section>
+    <section class="sec-productos">
+      <img width="250px" src="./Images/churrasquito.png" alt="churrasquito" />
+      <p class="p-titulo-produ">Juguete Churrasquito</p>
+      <p class="text-precio">$150</p>
+      <img width="250px" src="./Images/comedero.png" alt="Comedero" />
+      <p class="p-titulo-produ">Comedero</p>
+      <p class="text-precio">$250</p>
+      <img width="250px" src="./Images/Huesito.png" alt="Huesito" />
+      <p class="p-titulo-produ">Huesito</p>
+      <p class="text-precio">$650</p>
+    </section>
+  </body>
+  <footer>
     <p>Todos los derechos reservados Frond End</p>
-</footer>
+  </footer>
 </html>
